--- a/home.html
+++ b/home.html
@@ -943,7 +943,7 @@
 				<div class="rs-footer__title" data-aos="fade-up" data-aos-delay="100" data-aos-duration="1000">
 					<img src="./img/footer/footer_big_logo.svg" alt="">
 				</div>
-	
+
 				<div class="rs-footer__main" data-aos="fade-up" data-aos-delay="1000" data-aos-duration="1000">
 					<div class="rs-footer__container">
 						<div class="rs-footer__wrapper">
@@ -1013,9 +1013,10 @@
 		</footer>
 
 	</div>
-
+	
 	<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/@mladenilic/threesixty.js/dist/threesixty.js"></script>
 	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 	<script>AOS.init({ duration: 500, easing: "ease-out-quart", once: true });</script>
 	<script src="js/rs-sliders-init.js"></script>
