--- a/product.html
+++ b/product.html
@@ -328,7 +328,7 @@
 												<i class="spollers__icon"></i>
 											</button>
 											<div class="spollers__body">
-												<ul>
+												<ul class="marker-list">
 													<li>Зауженный пятак</li>
 													<li>Средний подъем</li>
 													<li>Средний свод</li>
@@ -345,7 +345,7 @@
 												<i class="spollers__icon"></i>
 											</button>
 											<div class="spollers__body">
-												<ul>
+												<ul class="marker-list">
 													<li>Зауженный пятак</li>
 													<li>Средний подъем</li>
 													<li>Средний свод</li>
@@ -362,7 +362,7 @@
 												<i class="spollers__icon"></i>
 											</button>
 											<div class="spollers__body">
-												<ul>
+												<ul class="marker-list">
 													<li>Зауженный пятак</li>
 													<li>Средний подъем</li>
 													<li>Средний свод</li>
@@ -379,13 +379,27 @@
 												<i class="spollers__icon"></i>
 											</button>
 											<div class="spollers__body">
-												<ul>
-													<li>Зауженный пятак</li>
-													<li>Средний подъем</li>
-													<li>Средний свод</li>
-													<li>Зауженная пятка</li>
-													<li>Средняя коробочка</li>
-													<li>U-вырез со шнурком</li>
+												<ul class="marker-list">
+													<li>
+														<a href="#" data-popup="#popup-size">Размер:</a>
+														<span>225, 230, 235, 240, 245, 250</span>
+													</li>
+													<li>
+														<a href="#">Полнота:</a>
+														<span>w1, w2, w3, w4, w5, w6</span>
+													</li>
+													<li>
+														<a href="#">Жесткость:</a>
+														<span>S, M, H</span>
+													</li>
+													<li>
+														<a href="#">Материал:</a>
+														<span>Атлас, Кирза</span>
+													</li>
+													<li>
+														<a href="#">Цвет:</a>
+														<span>Розовый, Карамельный</span>
+													</li>
 												</ul>
 											</div>
 										</div>
@@ -660,6 +674,47 @@
 			</div>
 		</footer>
 
+	</div>
+
+	<div id="popup-size" class="popup popup-size popup-right">
+		<div class="popup__wrapper">
+			<div class="popup__content">
+
+				<div class="popup__head">
+					<h5>Размер</h5>
+					<button data-close type="button" class="popup__close">
+						<svg width="19" height="19" viewBox="0 0 19 19" fill="none">
+							<path d="M18 1L1 18M1 1L18 18" stroke="#C80151" stroke-linecap="round"
+								stroke-linejoin="round" />
+						</svg>
+					</button>
+				</div>
+
+				<div class="popup__body">
+					<p>В различных частях мира используются разные системы размеров обуви:</p>
+
+					<ul class="marker-list">
+						<li>российская (метрическая): 220, 225, 230, 235 ...</li>
+						<li>европейская (штихмассовая): 35, 36, 37.5, 38 39...</li>
+						<li>английская (дюймовая): 4, 4.5, 5, 5.5, 6...</li>
+					</ul>
+
+					<p>Все системы основаны на замере длины стопы, а размеры – на замере длины обувной стельки. Размеры
+						балетной обуви компании R-Class обозначены в европейской (штихмассовой) системе.</p>
+
+					<p>В 2018 году выпущена RC Collection (пуанты), в которой принята российская (метрическая) система
+						измерения. Эта система удобна, т.к. облегчает подбор пуантов – фактический замер стопы примерно
+						соответствует размеру пуантов</p>
+
+					<p>Общего стандарта для измерения размеров не существует. Балетная обувь от разных производителей с
+						одинаковой маркировкой размера может отличаться по длине. Только примерка позволяет подобрать
+						наиболее удобную обувь по размеру.</p>
+
+					<img src="./img/blocks/scheme/scheme_1.jpg" alt="">
+				</div>
+
+			</div>
+		</div>
 	</div>
 
 	<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
